# esp_idf_cmake_issue

./: CMakeLists.txt  README.md  build-esp32.sh  sdkconfig
app/: CMakeLists.txt  app.cpp
libraries/: CMakeLists.txt
libraries/hal_gpio/: CMakeLists.txt  hal_gpio.cpp  hal_gpio.h
libraries/wifi/: CMakeLists.txt  wifi.cpp  wifi.h
